fix scrollbar layout shift

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -36,6 +36,8 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+
+  scrollbar-gutter: stable both-edges;
 }
 
 body > * {
